src/compiler/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Shell/content/Views/Shared/_NotificationsPartial.cshtml.pp
<ul class="nav nav-collapse">
    <li>Messages</li>
</ul>